Recap-777 Fixed bug for refreshing notes automatically with cancel button issue.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -180,6 +180,10 @@
                                                     <td width="">
                                                         <button th:if="${searchResult.status == 'RETRIEVAL ORDER PLACED' || searchResult.status == 'RECALL ORDER PLACED' || searchResult.status == 'EDD ORDER PLACED'}" th:title="'Cancel Request'" data-th-id="'cancelButton-' + ${searchResultStat.index}" type="button" class="btn btn-round" style="background-color:transparent;box-shadow: none;outline: none;color: #337ab7;border-color:#337ab7" name="action" th:onclick="'javascript:cancelRequest('+${searchResultStat.index}+')'">Cancel
                                                         </button>
+                                                        <div data-th-id="'showCancelButton-' + ${searchResultStat.index}" style="display:none;">
+                                                        <button style="background-color:transparent;box-shadow: none;outline: none;color: #337ab7;border-color:#337ab7" th:title="'Cancel Request'" data-th-id="'cancelButton:' + ${searchResultStat.index}" type="button" class="btn btn-round" name="action" th:onclick="'javascript:cancelRequest('+${searchResultStat.index}+')'">Cancel
+                                                        </button>
+                                                        </div>
                                                     </td>
                                                 </tr>
                                             </tbody>
