Recap-804 :  Modified jobs UI to retain cron expression after unscheduling. Provided link to jobs to look at the job executions.

--- a/src/main/resources/templates/scheduleJobs.html
+++ b/src/main/resources/templates/scheduleJobs.html
@@ -23,6 +23,7 @@
                                         <th>Cron Expression</th>
                                         <th>Status</th>
                                         <th>Actions</th>
+                                        <th>Executions</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -84,6 +85,9 @@
                                                     th:onclick="'javascript:showUnscheduleJob('+${jobStat.index}+')'">
                                                 Unschedule
                                             </button>
+                                        </td>
+                                        <td>
+                                            <a data-th-if="${job.jobInstanceId}" th:href="${@environment.getProperty('scsb.batch.schedule.url')} + 'jobs/' + ${job.jobName} + '/' + ${job.jobInstanceId}" target="_blank">Details</a>
                                         </td>
                                     </tr>
                                     </tbody>
